5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1836_1273.log
== SUBMITION (2019-06-25 11:25:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T
q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])
saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.1142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 11, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T
q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])
saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.20231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 11, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.73119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.75368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.04432
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.5027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
3.16584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
3.38087
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
3.2127
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
2.99316
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.08261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
0.887398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.23813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.1686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


q = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(q), saida)
print(saida)
-- EXECUTION TIME:
1.05884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(q), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
1.54121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
2.16746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
2.77373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
1.90575
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
0.77234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:29:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1],
])


saida = dont(inv(eq), saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:40:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
0.964421
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:40:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
1.70578
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:40:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
2.11168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:40:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
2.45237
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:40:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
2.48876
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:40:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, 1, 0, 0],
	[0, 1, 1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
2.20453
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


saida = dont(inv(eq), saida)
print(saida)
-- EXECUTION TIME:
1.10892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    saida = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
0.774708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    i = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
1.54195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    i = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
3.06563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    i = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
4.49538
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
4.10221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1273/main.py", line 15, in <module>
    i = dont(inv(eq), saida)
NameError: name 'dont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
3.76971
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- EXECUTION TIME:
1.81812
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dont(inv(eq), saida)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:42:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50, -120, 350, 870])
saida = saida.T


eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]
])


i = dot(inv(eq), saida)
print(i)
-- EXECUTION TIME:
1.03366
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
